force-app/main/default/objects/Evidence__c/Evidence__c.object-meta.xml
<CustomObject>
    <description>Object used to store proof of evidence against all types of project requirements</description>
    <label>Evidence</label>
    <nameField>
        <label>Evidence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evidences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>