force-app/main/default/objects/Evidence__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether sufficient evidence is provided against the relevant requirement</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>