force-app/main/default/objects/Evidence__c/fields/Clause_Control_Domain_project__c.field-meta.xml
<CustomField>
    <fullName>Clause_Control_Domain_project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables users to link evidence to higher level clauses/control domains</description>
    <label>Clause/Control Domain project</label>
    <referenceTo>Project_Clause_Control_Domain__c</referenceTo>
    <relationshipLabel>Evidences</relationshipLabel>
    <relationshipName>Evidences</relationshipName>
    <type>Lookup</type>
</CustomField>