force-app/main/default/objects/Evidence__c/fields/Project_Control__c.field-meta.xml
<CustomField>
    <fullName>Project_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables users to link evidence directly to Controls</description>
    <label>Project Control</label>
    <referenceTo>Project_Control__c</referenceTo>
    <relationshipLabel>Evidences</relationshipLabel>
    <relationshipName>Evidences</relationshipName>
    <type>Lookup</type>
</CustomField>