force-app/main/default/objects/Evidence__c/fields/Project_Control_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Project_Control_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables the user to link evidence to each low level control requirements</description>
    <label>Project Control Requirement</label>
    <referenceTo>Project_Control_Requirement__c</referenceTo>
    <relationshipLabel>Evidences</relationshipLabel>
    <relationshipName>Evidences</relationshipName>
    <type>Lookup</type>
</CustomField>