force-app/main/default/objects/Evidence__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evidence Submitted</fullName>
            </value>
            <value>
                <fullName>Evidence Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Changes Requested</fullName>
            </value>
            <value>
                <fullName>Evidence Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>