force-app/main/default/objects/Evidence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field outlines what the evidence is against whether it&apos;s a higher level clause or control or a more specific Control Requirement</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clause/Control Domain</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>Control Requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>